--- a/day-1/templates/promtail-config.yaml.j2
+++ b/day-1/templates/promtail-config.yaml.j2
@@ -6,7 +6,8 @@ positions:
   filename: /tmp/positions.yaml
 
 clients:
-  - url: "https://loki.rpch.tech/loki/api/v1/push"
+  #- url: "https://loki.rpch.tech/loki/api/v1/push"
+  - url: "https://loki.prod.hoprtech.net/loki/api/v1/push"
 
 scrape_configs:
   - job_name: system
