--- a/day-1/templates/docker-compose.yaml.j2
+++ b/day-1/templates/docker-compose.yaml.j2
@@ -15,6 +15,8 @@ services:
     env_file:
         - .env-default
         - .env
+    volumes:
+        - '/opt/exit-node/db:/app/db'
     networks:
       - hoprnet
     logging:
